--- a/programs/amazon_scrape_final.ipynb
+++ b/programs/amazon_scrape_final.ipynb
@@ -143,7 +143,7 @@
     "    amazon_df = pd.DataFrame.from_dict(d)\n",
     "    amazon_df['title'].replace('', np.nan, inplace=True)\n",
     "    amazon_df = amazon_df.dropna(subset=['title'])\n",
-    "    amazon_df.to_csv(\"amazon_data.csv\", header=True, index=False)"
+    "    amazon_df.to_csv(\"amazon_scrape_data.csv\", header=True, index=False)"
    ]
   },
   {
