updates to the code

--- a/programs/pdfbot/pdf_bot.ipynb
+++ b/programs/pdfbot/pdf_bot.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "!pip install python-dotenv"
+    "# !pip install python-dotenv"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "source": [
     "#load_dotenv()\n",
     "OPENAI_API_KEY=os.environ[\"OPENAI_API_KEY\"]\n",
-    "print(OPENAI_API_KEY)"
+    "# print(OPENAI_API_KEY)"
    ]
   },
   {
